Fixed font size on iphone (#54)
* Fixed font size on iphone

--- a/src/components/entry-content/styles.css
+++ b/src/components/entry-content/styles.css
@@ -67,6 +67,7 @@
 .viewer-container {
     border: 1px solid var(--gray-stroke-light);
     border-radius: 4px;
+    text-size-adjust: none !important;
 }
 
 .default-viewer {
